--- a/vanilla-mod-merger/merge-config.yaml
+++ b/vanilla-mod-merger/merge-config.yaml
@@ -1,4 +1,5 @@
 ﻿game_root: /mnt/c/Program Files (x86)/Steam/steamapps/common/Crusader Kings III/game
+custom_comment_prefix: "# QUIETER:"
 files:
   - relative_path: events/councillor_task_events/spymaster_task_events.txt
     modified_entity_keys:
