Finally get first version of the synchronizer working. Added a readme in case others want to use/adapt/extend this in the future.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # Script to sync mod files over to the documents mod directory so the game can actually use them.
 mod-sync.sh
 
-# Merged output files
+# Util files not meant for the publics eye
 paradox-file-utils/vanilla-synchronizer/sync-output/
 paradox-file-utils/parser/.antlr
+paradox-file-utils/vanilla-synchronizer/sync-config.yaml
